Skrivit text, lagt till bilder, skrivit extend & mixin

--- a/src/sass.html
+++ b/src/sass.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SASS</title>
+    <title>CSS-preprocessor</title>
     <link rel="stylesheet" href="css/main.scss">
     <script src="js/main.js" type="module"></script>
 
@@ -34,7 +34,7 @@
             </button>
             <ul>
                 <li><a href="index.html">Startsida</a></li>
-                <li><a href="">Hemsida</a></li>
+                <li><a href="sass.html"><u>Sass</u></a></li>
                 <li><a href="#">Om oss</a></li>
                 <li><a href="#">Nyheter</a></li>
                 <li><a href="#">Kontakt</a></li>
@@ -44,6 +44,10 @@
     <main>
         <h2>Sass</h2>
         <p>
+
+            Jag blev inte helt förtjust i sass helt ärligt, enda positiva känslan jag fick var av nestingen. 
+            Men allt känns förvirrande och att man gör det jobbigare för sig själv med dubbeljobb. Mycket enklare att skriva kod direkt i css.
+            if-sats känns onödig, likaså mixings och extend. Men partial kan vara nyttigt, allt blir så mcyket enklare att hitta och ha reda på.
           
         </p>
     </main>
