--- a/src/sass.html
+++ b/src/sass.html
@@ -50,6 +50,16 @@
             if-sats känns onödig, likaså mixings och extend. Men partial kan vara nyttigt, allt blir så mcyket enklare att hitta och ha reda på.
           
         </p>
+        <div class="bilder">
+
+            <picture>
+                <source srcset="picture/lejon.jpg?as=avif&width=300" type="image/avif">
+                <source srcset="picture/lejon.jpg?as=webp&width=300" type="image/webp">
+                <source srcset="picture/lejon.jpg?width=300" type="image/avif">
+                <img class="responsive" src="picture/lejon.jpg
+                " alt="Ett barn som skriver css-kod">
+            </picture>
+            </div>
     </main>
 </body>
 <footer>
