--- a/src/sass.html
+++ b/src/sass.html
@@ -56,8 +56,7 @@
                 <source srcset="picture/lejon.jpg?as=avif&width=300" type="image/avif">
                 <source srcset="picture/lejon.jpg?as=webp&width=300" type="image/webp">
                 <source srcset="picture/lejon.jpg?width=300" type="image/avif">
-                <img class="responsive" src="picture/lejon.jpg
-                " alt="Ett barn som skriver css-kod">
+                <img class="responsive" src="picture/lejon.jpg" alt="Ett barn som skriver css-kod">
             </picture>
             </div>
     </main>
